Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 <li>广告（播放前，暂停中，播放完）</li>
 <li>分段视频播放</li>
 <li>视频集连播</li>
-</ol>
+</ol><h4>
+<a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>demo</h4>
+
+<p><a href="http://lite3.github.io/VideoPlayer/demo/">demo</a></p>
       </section>
     </div>
 
