Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Videoplayer : VideoPlayer 是使用flash技术开发的视频播放器。" />
+    <meta name="description" content="VideoPlayer : VideoPlayer 是使用flash技术开发的视频播放器。" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Videoplayer</title>
+    <title>VideoPlayer</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/lite3/VideoPlayer">View on GitHub</a>
 
-          <h1 id="project_title">Videoplayer</h1>
+          <h1 id="project_title">VideoPlayer</h1>
           <h2 id="project_tagline">VideoPlayer 是使用flash技术开发的视频播放器。</h2>
 
             <section id="downloads">
@@ -54,7 +54,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Videoplayer maintained by <a href="https://github.com/lite3">lite3</a></p>
+        <p class="copyright">VideoPlayer maintained by <a href="https://github.com/lite3">lite3</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
