Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 <li>分段视频播放</li>
 <li>视频集连播</li>
 </ol><h4>
+<a name="%E9%85%8D%E7%BD%AE%E6%A0%BC%E5%BC%8F" class="anchor" href="#%E9%85%8D%E7%BD%AE%E6%A0%BC%E5%BC%8F"><span class="octicon octicon-link"></span></a>配置格式</h4>
+
+<p><a href="https://github.com/lite3/VideoPlayer/wiki/config.xml">config.xml</a></p>
+
+<h4>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>demo</h4>
 
 <p><a href="http://lite3.github.io/VideoPlayer/demo/">demo</a></p>
